--- a/templates/new-question.hbs
+++ b/templates/new-question.hbs
@@ -7,6 +7,11 @@
 	</div>
 
 	<div class="form-group">
+		<label for="author">Username:</label>
+		{{input id="author" class="form-control" value=author}}
+	</div>
+
+	<div class="form-group">
 		<label for="description">Add a description:</label>
 		{{textarea id="description" class="form-control" rows="15" value=description}}
 	</div>
