--- a/templates/answer.hbs
+++ b/templates/answer.hbs
@@ -6,5 +6,5 @@
 		{{textarea value=answer id="text" class="form-control" rows="5"}}
 	</div>
 
-	<button class="btn btn-primary" {{action 'save'}}>Add answer</button>
+	<button class="btn" {{action 'save'}}>Add answer</button>
 </form>
