--- a/templates/new-question.hbs
+++ b/templates/new-question.hbs
@@ -16,5 +16,5 @@
 		{{textarea id="description" class="form-control" rows="15" value=description}}
 	</div>
 
-	<button class="btn btn-primary" {{action 'save'}}>Save</button>
+	<button class="btn" {{action 'save'}}>Save</button>
 </form>
