--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,9 +1,9 @@
-<div class="container">
-	<nav class="navbar navbar-default" role="navigation">
-		<ul class="nav navbar-nav">
-			<li>{{#link-to 'questions'}}Questions{{/link-to}}</li>
-		</ul>
-	</nav>
+<nav class="navbar navbar-inverse" role="navigation">
+	<ul class="nav navbar-nav">
+		<li>{{#link-to 'questions'}}Questions{{/link-to}}</li>
+	</ul>
+</nav>
 
+<div class="container">
 	{{outlet}}
 </div>
