--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
 	<ul class="nav navbar-nav">
 		<li>{{#link-to 'questions'}}Questions{{/link-to}}</li>
 	</ul>
 </nav>
 
+<br>
+<br>
+<br>
 <div class="container">
 	{{outlet}}
 </div>
